# eos-pos-token

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
include/: postoken.hpp
scripts/: cpush.sh  ctable.sh  get-tokens.sh  transfer.sh
src/: CMakeLists.txt  postoken.cpp
tests/: CMakeLists.txt  contracts.hpp.in
tests/include/: contract.hpp  eosio_testing.hpp  postoken_contract.hpp  postoken_tester.hpp
tests/src/: contract.cpp  eosio.token_tests.cpp  main.cpp  postoken_tester.cpp  postoken_tests.cpp
